--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
+    "@content-collections/core": "^0.10.0",
+    "@content-collections/markdown": "^0.1.4",
+    "@content-collections/vite": "^0.2.6",
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
+    "@miyaneee/rollup-plugin-json5": "^1.2.0",
+    "@shikijs/rehype": "^3.9.2",
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/kit": "^2.22.0",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
@@ -29,6 +34,11 @@
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "zod": "^4.0.15"
+  },
+  "dependencies": {
+    "@content-collections/cli": "^0.1.6",
+    "json5": "^2.2.3"
   }
 }
