--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+name: CI
+
 on:
   - push
   - pull_request
@@ -7,8 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: pnpm/action-setup@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
           version: 10
 
-      - run: pnpm content-collections build
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Build content
+        run: pnpm content-collections build
