--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Build content
         run: pnpm content-collections build
